--- a/portfolio/src/tailwind.css
+++ b/portfolio/src/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face{
+    font-family: 'Blenda';
+    src: url('portfolio/public/fonts/BlendaScript.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
