--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.scroll-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge, and Firefox */
+.scroll-hidden {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
