updated all pages with all palce holder data, all that remains is contact functionality and filling in with project and revamp f ohom page. add animations later for fimal touch and colors

--- a/portfolio/src/tailwind.css
+++ b/portfolio/src/tailwind.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* For all major browsers */
+::-webkit-scrollbar {
+    display: none;  /* Safari and Chrome */
+}
+
+html {
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+}
